// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "canModerate": true,
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "group": Object {
    "activeProjects": Array [],
    "announcements": Array [],
    "groupToGroupJoinQuestions": Array [],
    "groupTopics": Array [],
    "id": "99",
    "joinQuestions": Array [],
    "members": Array [],
    "openOffersAndRequests": Array [],
    "prerequisiteGroups": Array [],
    "slug": "foo",
    "suggestedSkills": Array [],
    "upcomingEvents": Array [],
    "widgets": Array [],
  },
  "parentGroups": Array [],
  "slug": "foo",
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "graphql": Object {
    "query": "query ($slug: String) {
        group (slug: $slug) {
          id
          accessibility
          avatarUrl
          bannerUrl
          description
          location
          invitePath
          name
          settings {
            allowGroupInvites
            askGroupToGroupJoinQuestions
            askJoinQuestions
            publicMemberDirectory
            showSuggestedSkills
          }
          slug
          visibility
          childGroups (first: 100) {
            items {
              id
              name
              avatarUrl
            }
          }
          groupToGroupJoinQuestions {
            items {
              id
              questionId
              text
            }
          }
          joinQuestions {
            items {
              id
              questionId
              text
            }
          }
          moderators (first: 100) {
            hasMore
            items {
              id
              name
              avatarUrl
            }
          }
          parentGroups (first: 100) {
            items {
              avatarUrl
              id
              name
            }
          }
          prerequisiteGroups {
            items {
              avatarUrl
              id
              name
              slug
            }
          }
          pendingInvitations {
            hasMore
            items {
              id
              email
              createdAt
              lastSentAt
            }
          }
          suggestedSkills {
            items {
              id
              name
            }
          }
        }
      }",
    "variables": Object {
      "slug": "foo",
    },
  },
  "meta": Object {
    "extractModel": "Group",
  },
  "type": "GroupSettings/FETCH_GROUP_SETTINGS",
}
`;

exports[`mergeProps merges the props 2`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID, $changes: GroupInput) {
        updateGroupSettings(id: $id, changes: $changes) {
          id
          groupToGroupJoinQuestions {
            items {
              id
              questionId
              text
            }
          }
          joinQuestions {
            items {
              id
              questionId
              text
            }
          }
          prerequisiteGroups {
            items {
              id
              avatarUrl
              name
              slug
            }
          }
        }
      }",
    "variables": Object {
      "changes": 1,
      "id": "99",
    },
  },
  "meta": Object {
    "changes": 1,
    "extractModel": "Group",
    "id": "99",
    "optimistic": true,
  },
  "type": "GroupSettings/UPDATE_GROUP_SETTINGS",
}
`;

exports[`mergeProps merges the props 3`] = `
Object {
  "canModerate": true,
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "deleteGroup": [Function],
  "fetchGroupSettings": [Function],
  "fetchGroupSettingsMaker": [Function],
  "group": Object {
    "activeProjects": Array [],
    "announcements": Array [],
    "groupToGroupJoinQuestions": Array [],
    "groupTopics": Array [],
    "id": "99",
    "joinQuestions": Array [],
    "members": Array [],
    "openOffersAndRequests": Array [],
    "prerequisiteGroups": Array [],
    "slug": "foo",
    "suggestedSkills": Array [],
    "upcomingEvents": Array [],
    "widgets": Array [],
  },
  "parentGroups": Array [],
  "slug": "foo",
  "updateGroupSettings": [Function],
  "updateGroupSettingsMaker": [Function],
}
`;
